@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Command {
    +execute(topicManager: TopicManager, ui: Ui, fileManager: FileManager): void
}

class FilterCommand {
    #keyWord: String
    #topic: String

    +execute(topicManager: TopicManager, ui: Ui, fileManager: FileManager): void
}

class FilterByTopicCommand {
    #keyWord: String
    #topic: String

    +execute(topicManager: TopicManager, ui: Ui, fileManager: FileManager): void
    -printAllTopics(topicManager : TopicManager, ui : Ui) : void
    -printSingleTopic(topicManager : TopicManager, ui : Ui) : void
}

class FilterByImportanceCommand {
    #keyWord: String
    #topic: String

    +execute(topicManager: TopicManager, ui: Ui, fileManager: FileManager): void
    -printAllTopics(topicManager : TopicManager, ui : Ui) : void
    -printSingleTopic(topicManager : TopicManager, ui : Ui) : void
}

class TopicManager {
}

class Ui {
}

class FileManager {
}

class Buffer {
}

Command <|-- FilterCommand
FilterCommand <|-- FilterByTopicCommand
FilterCommand <|-- FilterByImportanceCommand

TopicManager .. FilterCommand
Ui .. FilterCommand
FileManager .. FilterCommand
Buffer .. FilterCommand

@enduml



@enduml